--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
         if [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
           sudo apt-get update
           sudo apt-get install -y g++ libidn2-0
+          dpkg -l | grep libidn2
         fi
       shell: bash
 
@@ -38,7 +39,7 @@ jobs:
       uses: lukka/get-cmake@v3.27.1
       with:
         cmakeVersion: '3.5.0'
-        useCloudCache: false
+        useCloudCache: true
 
     - name: Configure and Build with g++
       run: |
