--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,8 @@ jobs:
       run: |
         if [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
           sudo apt-get update
-          sudo apt-get install -y g++ libidn2-0
-          dpkg -l | grep libidn2
+          sudo apt-get install -y g++ libidn.so.11
+          dpkg -l | grep libidn.so.11
         fi
       shell: bash
 
