--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
         if [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
           sudo apt-get update
+          sudo apt-get install -y libidn2
           sudo ln -s /usr/lib/x86_64-linux-gnu/libidn2.so /usr/lib/x86_64-linux-gnu/libidn.so.11 || true
         fi
       shell: bash
@@ -38,7 +39,6 @@ jobs:
       uses: lukka/get-cmake@v3.27.1
       with:
         cmakeVersion: '3.5.0'
-        useCloudCache: true
 
     - name: Configure and Build with g++
       run: |
