Fix main.yml next try

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake .. -DCMAKE_CXX_COMPILER=g++
+        cmake .. -G "MinGW Makefiles"
         cmake --build .
 
     - name: Run Unit Tests
