--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake .. -G "MinGW Makefiles" -DCMAKE_CXX_COMPILER=g++
+        cmake .. -G "MinGW Makefiles"
         cmake --build .
 
     - name: Run Unit Tests
